--- a/package.json
+++ b/package.json
@@ -3,12 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@fullcalendar/daygrid": "^5.11.2",
+    "@fullcalendar/interaction": "^5.11.2",
+    "@fullcalendar/react": "^5.11.2",
+    "@fullcalendar/timegrid": "^5.11.2",
+    "@mui/material": "^5.10.0",
+    "@syncfusion/ej2-react-schedule": "^20.2.40",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^4.6.2",
+    "cors": "^2.8.5",
+    "date-fns": "^2.0.0-beta.5",
+    "express": "^4.18.1",
+    "firebase": "^9.9.1",
+    "moment": "^2.29.4",
+    "mongoose": "^6.5.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.26",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
