--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.6.2",
     "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "firebase": "^9.9.1",
     "moment": "^2.29.4",
